--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,16 +4,8 @@
 ---
 
 <button
-	class="appearance-none py-2 px-4 bg-purple-500 text-white font-semibold rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-opacity-75"
+	type="button"
+	class="modal-trigger bg-red text-white font-bold text-xl p-4 w-full rounded-sm hover:opacity-85 focus:ring-2 md:w-auto md:px-6"
 >
 	<slot />
 </button>
-
-<script>
-	import confetti from 'canvas-confetti';
-	const button = document.body.querySelector('button');
-
-	if (button) {
-		button.addEventListener('click', () => confetti());
-	}
-</script>
