--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Topbar from '../components/Topbar.astro';
 import Modal from '../components/Modal.astro';
 ---
 
-<Layout title="First Aid Training">
+<Layout title="First Aid Training Tailored To Your Workplace – St John Ambulance NSW">
   <section class="sticky top-0 z-20">
     <Topbar />
     <Header />
