changed some text based on client feedback

--- a/src/components/Scenario.astro
+++ b/src/components/Scenario.astro
@@ -14,7 +14,7 @@ import Button from "./Button.astro"
             <svg class="w-6 h-6 shrink-0 md:w-8 md:h-8 md:-mt-0.5" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12 20.4375C16.6599 20.4375 20.4375 16.6599 20.4375 12C20.4375 7.3401 16.6599 3.5625 12 3.5625C7.3401 3.5625 3.5625 7.3401 3.5625 12C3.5625 16.6599 7.3401 20.4375 12 20.4375ZM15.1332 8.93848L9.9719 14.0997L8.62541 12.7532L7.56475 13.8139L9.9719 16.221L16.1938 9.99914L15.1332 8.93848Z" fill="#E5173F"/>
             </svg>
-            <span>Locate and use your own first-aid tools (like defibrillators) at your workplace</span>                
+            <span>Learn where your workplace first aid equipment is and how to use it</span>                
         </li>
         <li class="flex gap-1 md:text-lg md:gap-1.5 lg:text-xl">
             <svg class="w-6 h-6 shrink-0 md:w-8 md:h-8 md:-mt-0.5" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
