--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -34,7 +34,7 @@ import Button from "./Button.astro";
           3
         </div>
         <div class="ml-3 pt-1 lg:ml-0 lg:mt-2">
-          <p class="font-bold text-base lg:text-lg">Shared learning at your workplace</p>
+          <p class="font-bold text-base lg:text-lg">Team training at your workplace</p>
         </div>
       </div>
       <div class="flex items-start lg:flex-col lg:basis-3/12">
