added success message

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Badges from '../components/Badges.astro';
 import TrustedBy from '../components/TrustedBy.astro';
 import Topbar from '../components/Topbar.astro';
 import Modal from '../components/Modal.astro';
+import Success from '../components/Success.astro';
 ---
 
 <Layout title="First Aid Training Tailored To Your Workplace – St John Ambulance NSW">
@@ -31,6 +32,7 @@ import Modal from '../components/Modal.astro';
   </main>
   <Footer />
   <Modal />
+  <Success />
 </Layout>
 <script async defer is:inline>
   const buttons = document.querySelectorAll('.modal-trigger');
