--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -36,6 +36,15 @@ class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-f
                         type="submit"
                         class="bg-red text-white font-bold text-xl p-4 w-full rounded-sm hover:opacity-85 focus:ring-2 md:w-auto md:px-6"
                     >Request a consultation</button>
+
+                <div id="successMessage" class="pointer-events-auto w-full overflow-hidden rounded-lg bg-green-100 border border-green-800/20 p-4 items-start flex hidden" aria-hidden="true">
+                    <div class="flex-shrink-0 pt-0.5">
+                        <svg class="h-8 w-8 text-navy" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    </div>
+                    <p class="text-lg font-bold text-navy flex ml-3 w-0 flex-1 pt-0.5">Thank you, we'll contact you within 24 hours.</p>
+                </div>
             </form>
         </div>
     </div>
@@ -61,3 +70,51 @@ class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-f
     @apply md:opacity-100 md:self-center md:w-full md:max-w-screen-md md:m-auto md:max-h-[90vh]
 }
 </style>
+
+<script is:inline>
+    const handleSubmit = (event) => {
+  event.preventDefault();
+
+  const myForm = event.target;
+  const formData = new FormData(myForm);
+  const submitButton = myForm.querySelector('button[type="submit"]');
+  
+  submitButton.disabled = true;
+  submitButton.classList.add('opacity-50', 'cursor-not-allowed');
+
+  fetch("/", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: new URLSearchParams(formData).toString(),
+  })
+    .then(() => {
+      toggleSuccess();
+      submitButton.disabled = false;
+      submitButton.classList.remove('opacity-50', 'cursor-not-allowed');
+    })
+    .catch((error) => {
+      alert(error);
+      submitButton.disabled = false;
+      submitButton.classList.remove('opacity-50', 'cursor-not-allowed');
+    });
+};
+
+const successMessage = document.getElementById('successMessage');
+
+function toggleSuccess() {
+    successMessage.ariaHidden = (successMessage.ariaHidden == 'true') ? 'false' : 'true';
+    successMessage.classList.toggle('hidden');
+    if(successMessage.ariaHidden == 'false'){
+      const formInputs = document.querySelectorAll('form input, form textarea');
+      const inputChangeHandler = () => {
+        toggleSuccess();
+        formInputs.forEach(input => input.removeEventListener('input', inputChangeHandler));
+      };
+      formInputs.forEach(input => input.addEventListener('input', inputChangeHandler, { once: true }));
+    }
+}
+
+document
+  .querySelector("form")
+  .addEventListener("submit", handleSubmit);
+</script>
