--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -5,8 +5,8 @@ aria-hidden=true
 id="modal"
 class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-full z-40">
     <div onClick="toggleModal()" class="modal-overlay bg-black/70 w-screen h-screen fixed top-0 left-0 opacity-0 pointer-events-none"></div>
-    <div class="modal bg-white py-4 z-20 md:opacity-0">
-        <div class="px-4 pb-4 flex justify-between items-center gap-2 border-b border-gray-200">
+    <div class="modal bg-white z-20 md:opacity-0 max-h-[90vh] overflow-hidden">
+        <div class="p-4 flex justify-between items-center gap-2 border-b border-gray-200">
             <h2 class="font-bold text-2xl">Get a free consultation</h2>
             <button onClick="toggleModal()" type="button" class="shrink-0 w-6 h-6">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -14,7 +14,7 @@ class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-f
                 </svg>
             </button>   
         </div>
-        <div class="p-4 overflow-y-auto modal-body">
+        <div class="p-4 overflow-y-auto max-h-[80vh] md:max-h-[70vh] modal-body">
             <form id="consultationForm" name="consultationForm" class="flex flex-col gap-6" method="POST" netlify>
                 <div>
                     <label for="name" class="block mb-2 text-l font-medium text-navy">Name</label>
@@ -32,11 +32,6 @@ class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-f
                     <label for="phone" class="block mb-2 text-l font-medium text-navy">Phone</label>
                     <input type="tel" id="phone" name="phone" class="w-full px-3 py-2 text-navy border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-navy" required>
                 </div>
-                <button
-                        type="submit"
-                        class="bg-red text-white font-bold text-xl p-4 w-full rounded-sm hover:opacity-85 focus:ring-2 md:w-auto md:px-6"
-                    >Request a consultation</button>
-
                 <div id="successMessage" class="pointer-events-auto w-full overflow-hidden rounded-lg bg-green-100 border border-green-800/20 p-4 items-start flex hidden" aria-hidden="true">
                     <div class="flex-shrink-0 pt-0.5">
                         <svg class="h-8 w-8 text-navy" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -45,6 +40,11 @@ class="modal-container flex flex-col justify-end fixed w-full h-screen -bottom-f
                     </div>
                     <p class="text-lg font-bold text-navy flex ml-3 w-0 flex-1 pt-0.5">Thank you, we'll contact you within 24 hours.</p>
                 </div>
+                <button
+                        type="submit"
+                        id="consultationSubmit"
+                        class="consultation-submit bg-red text-white font-bold text-xl p-4 w-full rounded-sm hover:opacity-85 focus:ring-2 md:w-auto md:px-6"
+                    >Request a consultation</button>
             </form>
         </div>
     </div>
